syntax = "proto3";
package order;
message OrderRequest {
    string customerId = 1;
    string productId = 2;
}

message OrderResponse {
    string customerId = 1;
    string productId = 2;
    string orderId = 3;
    string orderStatus = 4;
}

message ProcessOrderRequest {
    OrderRequest orderRequest = 1;
}

message ProcessOrderResponse {
    OrderResponse orderResponse = 1;
}

message request {
    required string id = 1;
}

message response {
    OrderResponse orderResponse = 1;
}

message findAll{
    repeated OrderResponse orderResponse = 1;
}

service OrderService {
    rpc orderProduct (ProcessOrderRequest) returns (ProcessOrderResponse);
    rpc findOrderById (request) returns (response);
    rpc findAllOrder (request) returns (findAll);
}